src/main/java/com/example/spring_basic/global/error/exception/NotFoundException.java
package com.example.spring_basic.global.error.exception;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
